# $Id$

CoLo 1.9 (xxxx-xx-xx)
---------------------

CoLo 1.8 (2004-04-26)
---------------------

*	Added 'pci' command.

*	Added 'ping' command.

*	Added 'tftp' command.

*	Added network stack (the 'net' command).

*	Added man pages for 'flash-tool' and 'putlcd'.
	[Martin Michlmayr]

CoLo 1.6 (2004-04-18)
---------------------

*	Added support for RAID partitions.
	[Christian Mock]

*	The layout of the source tree has been tidied up.

*	Stage 2 is now loaded at the top of RAM rather than the bottom. We can now
	load kernels linked to run at 0x80000000. This is a big change, but it all
	seems to work.

	Unfortunately the chain loader can no longer detect if it's being loaded
	from "CoLo".

*	Build output files are now 'colo-rom-image.bin' and 'colo-chain.elf'.

*	Boot loader now sources the script '/boot/default.colo' by default, rather
	than '/boot/default.boot'.

*	Fixed stupid error in linking of chain loader.

CoLo 1.5 (2004-04-11)
---------------------

*	The boot loader now has a name, "CoLo".
	[suggested by Kumba]

*	Added support for loading initial RamDisk. A second path passed to the
	'load' command is interpreted as a file to be loaded as an initial RamDisk.
	The 2004-04-11 2.4.x kernel patch includes the kernel side of this
	functionality.
	[suggested by Martin Michlmayr]

*	The chain loader now halts with an error message if it's loaded from "CoLo"
	rather than from the original Cobalt loader.

# vi:set ts=3 sw=3 tw=78 ai: