@@ -3,6 +3,12 @@
 CoLo 1.9 (xxxx-xx-xx)
 ---------------------
 
+*	Added boot menu and 'boot' command.
+
+*	Added 'variable' command.
+
+*	Added variables to hold DHCP parameters.
+
 CoLo 1.8 (2004-04-26)
 ---------------------
 
